# endava-cloud-certification-backend

./: .env.sample  Cargo.toml  Dockerfile  requests.http
.github/workflows/: main.yml
data/: certificates.json
migrations/: 20260126053039_init.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/auth/: azure.rs
src/db/: mod.rs  seed.rs
src/models/: certificate.rs  mod.rs  user.rs  user_role.rs
src/routes/: certificate.rs  health.rs  mod.rs  root.rs
