[package]
name = "axum-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
azure_jwt = { version = "0.4.1", default-features = false, features = ["async"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "=9.3.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
