[package]
name = "axum-web"
version = "0.2.3"
edition = "2024"
default-run = "axum-web"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
azure_jwt = { version = "0.4.1", default-features = false, features = ["async"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "=9.3.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.2", features = ["cors"] }
